Bug 447492 - Thumbnails for a given recent project are only generated once per session
Summary: Thumbnails for a given recent project are only generated once per session
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-24 22:27 UTC by tomtomtomreportingin
Modified: 2022-01-29 15:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-12-24 22:27:32 UTC
SUMMARY
Thumbnails for recent projects are only generated once per session, as in, they do not properly update when the user saves changes for an already saved recent project. They will only update when the user initially saves the image or starts a new Krita session.

This does not apply to the file picker thumbnails. It seems to only apply to the Welcome Screen thumbnails and File -> Open Recent thumbnails.

STEPS TO REPRODUCE
1. Create a new image.
2. Make one stroke and save the image.
3. Observe thumbnail in File -> Open Recent.
4. Make another stroke and save.
5. Observe thumbnail in File -> Open Recent.

OBSERVED RESULT
The thumbnail in step 3 is still being used.

EXPECTED RESULT
There should be a new thumbnail from the modifications made in step 4, without having to restart Krita.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.12.12 (appimage)
Comment 1 Alvin Wong 2021-12-25 08:11:54 UTC
Yeah, I think we never invalidate the cached thumbnail when updating the recent file list.
Comment 2 Alvin Wong 2022-01-04 14:49:30 UTC
I'll take this now since I'm touching this area of code.
Comment 3 Bug Janitor Service 2022-01-23 13:42:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1307
Comment 4 Alvin Wong 2022-01-29 15:00:38 UTC
Git commit d5417faf75a8a1166cbee76a8024817c9e7e5174 by Alvin Wong.
Committed on 29/01/2022 at 15:00.
Pushed by alvinwong into branch 'master'.

Make recent file icons update on saving

M  +2    -0    libs/ui/KisPart.cpp
M  +24   -0    libs/ui/utils/KisRecentFileIconCache.cpp
M  +11   -0    libs/ui/utils/KisRecentFileIconCache.h

https://invent.kde.org/graphics/krita/commit/d5417faf75a8a1166cbee76a8024817c9e7e5174