Make recent file icons update on saving

BUG: 447492